--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Creation Form</title>
+    <title>What's your Superpower!</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -36,7 +37,9 @@
 </head>
 <body>
 
-<h1>Website Creation Form</h1>
+<h1><center>What's your superpower?!🦸🏻🚀</center></h1>
+
+
 <form action="/submit" method="post">
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" required>
@@ -51,7 +54,7 @@
         <option value="Leo">Leo</option>
         <option value="Virgo">Virgo</option>
         <option value="Libra">Libra</option>
-    
+
         <option value="Scorpio">Scorpio</option>
         <option value="Sagittarius">Sagittarius</option>
         <option value="Capricorn">Capricorn</option>
@@ -62,6 +65,11 @@
     <button type="submit">Submit</button>
 </form>
 <script src="script.js"></script>
+<div class="content">
+    <h1>Your Content Here</h1>
+    <p>Some text overlaying the video.</p>
+</div>
+
 </body>
 </html>
 
